minor tweaks to logic, and todo list

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div>
       <span>Pokemon caught: </span><span id="totalCaught">0</span>
     </div>
+    <div>
+      <span>Guesses Remaining: </span><span id='guessesRemaining'>10</span>
+    </div>
    
   </body>
 </html>
