--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
   </head>
   <body>
+<!--   1. add bootstrap formating
+  2. add images
+  3. create clues
+  4. on win create capture animation
+  5. on loss create run away animation
+   -->
     <h1 id='wordSpot'></h1>
     <div>
       <span>Pokemon caught: </span><span id="totalCaught">0</span>
