--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
   <meta charset="UTF-8">
-    <title>Hangman</title>
+    <title>Pokemon Hangman</title>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js">    </script>
     <script type="text/javascript" src="assets/javascript/game.js"></script>
     
@@ -32,9 +32,9 @@
     <div class="container">
         <div class="jumbotron" id="imageBox">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-4">
                     <div class='row'>
-                        <h2 id='wordSpot'></h2>
+                        <h4 id='wordSpot'></h4>
                     </div>
                     <div class="row">
                         <div class="progress">
@@ -44,13 +44,13 @@
                         </div> 
                     </div>
                 </div>
+                <!-- <div class='col-sm-2'></div> -->
                 <div class='col-sm-2'></div>
-                <div class='col-sm-2'></div>
-                <div id="picture-spot" class="col-sm-2">
+                <div id="picture-spot">
                 </div>
             </div>
-            <div class="row">
-              <div class="col-sm-2"> <img src="assets/images/trainer.png" alt="Trainer"></div>
+            <div class="row" id="bottom-row">
+              <div class="col-sm-2"> <img src="assets/images/trainer.png" alt="Trainer" id="trainer"></div>
               <div class="col-sm-6"></div>
               <div class="col-sm-4">
                   <div class="circle" id="circle-1"></div>
