added random characters

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
           <div class='row'>
             <span>Guesses Remaining: </span><span id='guesses-remaining'></span>
           </div>
-          <div class='row'>
-            <span>Guessed Letters: </span><span id='guessed-letters'></span>
+          <div class='row unknown-sybmol' >
+            <span>Guessed Letters: </span><span id='guessed-letters' class='unknown-sybmol'></span>
           </div>
         </div>
       <div id='icon-spot'></div>
