--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
     <title>Pokemon Hangman</title>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js">    </script>
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
-    <script type="text/javascript" src="assets/javascript/typed.js"></script>
+    <script type="text/javascript" src="./assets/javascript/game.js"></script>
+    <script type="text/javascript" src="./assets/javascript/typed.js"></script>
   <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="row" id="bottom-row">
-              <div class="col-sm-2"> <img src="assets/images/trainer.png" alt="Trainer" id="trainer"></div>
+              <div class="col-sm-2"> <img src="./assets/images/trainer.png" alt="Trainer" id="trainer"></div>
               <div class="col-sm-6"></div>
               <div class="col-sm-4">
                   <div class="circle" id="circle-1"></div>
