--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
   <head>
   <meta charset="UTF-8">
     <title>Pokemon Hangman</title>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js">    </script>
-    <script type="text/javascript" src="./assets/javascript/game.js"></script>
-    <script type="text/javascript" src="./assets/javascript/typed.js"></script>
+
   <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
   <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
 
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  
   </head>
   <body>
    <div class="text-center">
-      <img src="assets/images/logoCatchEm.png" alt="Classic Logo" class="img-responsive">
+      <img src="Aassets/Images/logoCatchEm.png" alt="Classic Logo" class="img-responsive">
     </div>
 
     <div class="container">
@@ -70,5 +69,9 @@
     </div>
     </div>
    
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js">    </script>
+    <script type="text/javascript" src="./assets/javascript/game.js"></script>
+    <script type="text/javascript" src="./assets/javascript/typed.js"></script>
+
   </body>
 </html>
