--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="row" id="bottom-row">
-              <div class="col-sm-2"> <img src="./assets/images/trainer.png" alt="Trainer" id="trainer"></div>
+              <div class="col-sm-2"> <img src="assets/Images/trainer.png" alt="Trainer" id="trainer"></div>
               <div class="col-sm-6"></div>
               <div class="col-sm-4">
                   <div class="circle" id="circle-1"></div>
