--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8">
     <title>Pokemon Hangman</title>
-
+  <script src="assets/javascript/Vibrant.js"></script>
   <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
@@ -68,6 +68,7 @@
       <div id='icon-spot'></div>
     </div>
     </div>
+    <button class="btn btn-primary" id="touchy">Touchy</button>
    
     <script src="https://code.jquery.com/jquery-3.1.1.min.js">    </script>
     <script type="text/javascript" src="./assets/javascript/game.js"></script>
